RESOLVED FIXED30260
REGRESSION: Logging out from SAP doesn't work
https://bugs.webkit.org/show_bug.cgi?id=30260
Summary REGRESSION: Logging out from SAP doesn't work
Alexey Proskuryakov
Reported 2009-10-09 13:34:51 PDT
SAP uses the following code for logging out: var agt=navigator.userAgent.toLowerCase(); if (agt.indexOf("msie") != -1) { document.execCommand( "ClearAuthenticationCache" ); } else { var xmlhttp = createXMLObject(); xmlhttp.open("GET", "Logoff.htm", true, "logout", "logout"); xmlhttp.send(""); xmlhttp.abort(); } This works quite differently in IE and in Firefox, but lets one log out securely. We should make the Firefox version work in WebKit (again?). See <https://bugzilla.mozilla.org/show_bug.cgi?id=287957> for some related discussion. <rdar://problem/6447115>
Attachments
proposed fix (28.21 KB, patch)
2009-10-09 13:35 PDT, Alexey Proskuryakov
beidson: review+
Alexey Proskuryakov
Comment 1 2009-10-09 13:35:55 PDT
Created attachment 40964 [details] proposed fix
Brady Eidson
Comment 2 2009-10-09 15:02:06 PDT
Comment on attachment 40964 [details] proposed fix Fun time. r=me
Brady Eidson
Comment 3 2009-10-09 15:02:14 PDT
Fun times*, even
Alexey Proskuryakov
Comment 4 2009-10-09 15:30:51 PDT
Alexey Proskuryakov
Comment 5 2009-10-09 17:47:29 PDT
Note You need to log in before you can comment on or make changes to this bug.